// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TweenTransform can accept custom styles 1`] = `
<div
  style={
    Object {
      "background": "black",
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`TweenTransform renders 1`] = `
<div
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`TweenTransform sets finish 1`] = `
<div
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`TweenTransform sets start 1`] = `
<div
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`TweenTransform sets transitionDelay with delay prop 1`] = `
<div
  style={
    Object {
      "transform": "none",
      "transitionDelay": "1000ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`TweenTransform sets transitionDuration with duration prop 1`] = `
<div
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "1000ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease",
    }
  }
/>
`;

exports[`TweenTransform sets transitionTimingFunction with timingFn prop 1`] = `
<div
  style={
    Object {
      "transform": "none",
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "transform",
      "transitionTimingFunction": "ease-in-out",
    }
  }
/>
`;
